--- a/index.html
+++ b/index.html
@@ -35,20 +35,28 @@
     <section class="cadastro">
         <p>Novo pro aqui? <a href="https://www.netflix.com/br/" target="_blank" rel="noopener">Assine agora.</a></p>
         <p>Esta página é protegida pelo Google reCAPTCHA para garantir que voce não é um robo.</a></p>
-        <p>As informações recolhidas pelo Google reCAPTCHA estão sujeitas à <a  href="https://policies.google.com/privacy"target="_blank" rel="noopener">Política de Privacidade</a> e <a href="https://policies.google.com/terms" target="_blank" rel="noopener">Termos de Uso</a>, e são usadas para oferecer, manter e melhorar o serviço reCAPTCHA e por questões de segurança (não são usadas para exibir anúncios personalizados pelo Google).</p>
     </section>
 
     <footer>
+        <div class="linha">
         <p>Dúvidas? Ligue 0800 591 2876</p>
-        <div class="container">
-            <table>
-                <td>Perguntas frequentes</td>
-                <td>Central de ajuda</td>
-                <td>Termos de uso</td>
-                <td>Privacidade</td>
-                <td>Preferencias de cookies</td>
-                <td>Informações corporativas</td>
-            </table>
+        <div class="container4">
+                <table>
+                
+                        <tr>
+                            <td><a href="https://help.netflix.com/pt/node/412" target="_blank" rel="noopener">Perguntas frequentes</a></td>
+                            <td><a href="https://help.netflix.com/pt/" target="_blank" rel="noopener">Central de ajuda</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="https://help.netflix.com/legal/termsofuse" target="_blank" rel="noopener">Termos de uso</a></td>
+                            <td><a href="https://help.netflix.com/legal/privacy" target="_blank" rel="noopener">Privacidade</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="https://www.netflix.com/br/login" target="_blank" rel="noopener">Preferencias de cookies</a></td>
+                            <td><a href="https://help.netflix.com/legal/corpinfo" target="_blank" rel="noopener">Informações corporativas</a></td>
+                        </tr>
+                </table>
+            </div>
         </div>
     </footer>
     
